packages/example/content/boomerang-cicd/7.2.0/how-to-guide/08.modes-and-helm.md
---
title: Mode is Helm Chart
index: 8
---

# Helm Chart mode

The Boomerang CI Helm Chart mode will package the helm chart and store in the private Boomerang Chart repository

These charts are then available in any of the Boomerang ICP instances.

## Properties

The following summarizes the properties that can be used in conjunction with `mode=helm.chart`. These are recommended to be set at the Stage or Version property scope.

The below is a sample file `.boomerang.properties` file.

```
#General
mode=helm.chart
build.tool=helm

#Slack Notifications
notifications.type=slack
notifications.slack.channel=
notifications.slack.dm=

#Filtering
filter.target=tag
filter.expression=^(\d+\.)?(\d+\.)?(\*|\d+)$
```

### Optional

**Auto Increment Chart Version**

To auto increment the chart(s) version number set this to true. It will increment the patch number on a semver2 compliant version i.e. 0.1.2 will become 0.1.3. It will also handle additional labels i.e. 0.1.2-beta will become 0.1.3-beta

```
#Auto increment chart(s) version.
helm.chart.version.increment=true|false
```

**Set Chart Version to Tag**

To set the chart(s) version to the Git Tag. Useful if the git repository only has one chart in it. _Caution:_ if this is set AND `helm.chart.version.increment` this will take precedence.

```
helm.chart.version.tag=true|false
```

**Set Chart Directory**

If you have multiple directories in your git repository such as a `development` and `stable` folder and only want CI to pick up one folder or the other.

```
#Directory chart(s) are located in such as stable or development. IF chart(s) in root leave blank
helm.chart.directory=
```

**Chart Ignore List**

If you multiple charts in your git repository and want to ignore particular charts. This can be useful for reference charts or charts in very early development.

_Note:_ this is a space delimited list.

```
#List of chart(s) to ignore.
helm.chart.ignore=
```

### Distribution

By default the helm charts are distributed to the Boomerang Lib Helm Chart repository. The following properties allow you to set an alternative distribution repository. This can either be another Artifactory based Helm repository or a GitHub helm repository.

| Property                 | Useful For                                                                                                       | Default Value                                                       | Alternative Values                                                       |
| ------------------------ | ---------------------------------------------------------------------------------------------------------------- | ------------------------------------------------------------------- | ------------------------------------------------------------------------ |
| `helm.repo.type`         | The type of repository to distribute to.                                                                         | `artifactory`                                                       | `github`                                                                 |
| `helm.repo.url`          | The URL for the repository exactly as you would use in `helm repo add`.                                          | `https://tools.boomerangplatform.net/artifactory/boomeranglib-helm` | `https://raw.githubusercontent.com/boomerang-io/boomerang.charts/stable` |
| `helm.repo.user`         | The username credential for accessing the distribution repository. If using a token, you would leave this blank. | -                                                                   | -                                                                        |
| `helm.repo.password`     | The password credential for accessing the distribution repository. For example a GitHub Personal Access Token.   | -                                                                   | -                                                                        |
| `helm.repo.index.branch` | The branch to commit the index.yaml to. Only needed if `helm.repo.type=github`.                                  | `index`                                                             | -                                                                        |

**GitHub Helm Repository**

The way this works is that on the repositories default branch an `index.yaml` file will be committed. This is what is referenced by the Helm CLI in the `helm repo add` command i.e. `https://raw.githubusercontent.com/boomerang-io/boomerang.charts/stable` is the raw link to the `index.yaml` based on the: `boomerang-io` organization, `boomerang.charts` repository, and `stable` branch.

Additionally all of the packaged tgz chart files will be upload to the Releases of the repository.

### Build Tool

`build.tool=` tells Boomerang CI what type of build script to apply. We currently support the following types:

| **Build Tool**  | **Support** |                          **Useful For**                          |
| :-------------: | :---------: | :--------------------------------------------------------------: |
| build.tool=helm |   stable    | The industry standard for generating Helm charts for Kubernetes. |

## Prerequisites

The Chart.yaml and associated chart files / directories are located at the top level of the project.

## Constraints

Logs are currently not accessible via CI. Nor is there any linting or scorecard data generated.

`_stable` is a reserved folder and can't be in your workspace

## Useful Links

https://docs.helm.sh/chart_template_guide/#the-chart-template-developer-s-guide
